Allow to specify the name of a counter in a repeat block

--- a/vasm/Makefile
+++ b/vasm/Makefile
@@ -5,7 +5,7 @@ TARGETEXTENSION =
 OUTFMTS = -DOUTAOUT -DOUTBIN -DOUTELF -DOUTHUNK -DOUTSREC -DOUTTOS -DOUTVOBJ
 
 CCOUT = -o 
-COPTS = -c -O2 $(OUTFMTS)
+COPTS = -c  $(OUTFMTS) -g
 
 LD = $(CC)
 LDOUT = $(CCOUT)
